[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Interface/Menu/Display/clock_30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Nodes/Interface/Menu/Buttons/clock_font_35.tres" type="DynamicFont" id=2]
[ext_resource path="res://Nodes/Interface/Menu/pause_menu.gd" type="Script" id=3]

[node name="Pause_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -12.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vbox" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_label" type="Label" parent="Vbox"]
margin_right = 500.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0.529412, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "GAME PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" type="Button" parent="Vbox"]
margin_top = 118.0
margin_right = 500.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="Vbox/resume_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.866667, 0.568627, 0.12549, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "Resume
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="Button" parent="Vbox"]
margin_top = 152.0
margin_right = 500.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="Vbox/exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.866667, 0.568627, 0.12549, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "EXIT TO MENU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="Vbox"]
margin_top = 186.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="Vbox/quit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.866667, 0.568627, 0.12549, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "QUIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Vbox/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Vbox/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Vbox/quit_button" to="." method="_on_quit_button_pressed"]
